== 1.4.1 released 2008-10-08

* Extracted english text into configuration to support alternate languages. I18n support.

== 1.4.0 released 2008-10-08

* Fixed bug when duping or cloning to copy over instance vars instead of method values
* Fixed bug with older versions of ActiveRecord and creating an alias method chain on find in AssociationCollection
* Added modifiers: upper, lower, trim, ltrim, rtrim
* Added not_nil and not_blank conditions
* Modified conditions so that table name is a variable, this allows table name to be switched on the fly.
* Modified auto joins to return symbols instead of SQL. This allows AR to properly merge the joins and ultimately result in proper SQL when performing multiple complex scopes.
* Fixed conflicts between includes and joins, duplicate joins are not added. Includes are prioritized. This also makes ActiveRecord much more flexible. Now you can cherry pick included associations. And not have to worry about conflicting with joins.
* Modified ActiveRecord's default behavior to use inner joins with the :joins option. Inner joins impose limitations. When providing this as a "convenience", inner joins do not make sense. The don't allow OR conditions to be across associations, nor does it properly order when an ordering by an association attribute when that association is optional.

== 1.3.5 released 2008-10-08

* Since joins are now strings, AR doesn't know how to merge them properly. So searchgasm now checks which joins to skip over to avoid conflicts.

== 1.3.4 released 2008-10-07

* Fixed method names creation for conditions with modifiers
* Create local column conditions, incase there are method conflicts. Such as "id".
* All joins are switched to left outer joins. When search with *any* conditions, inner joins return incorrect results. Also when ordering by an association that allows for blanks, inner joins exclude the records with blank values. Only option is left outer joins.