@@ -98,23 +98,23 @@ class TestSearchBase < Test::Unit::TestCase
     search.lock = true
     assert_equal search.lock, true
   end
-=begin
-  def test_auto_joins
+
+  def test_joins
     search = Account.new_search
-    assert_equal nil, search.auto_joins
+    assert_equal nil, search.joins
     search.conditions.name_contains = "Binary"
-    assert_equal nil, search.auto_joins
+    assert_equal nil, search.joins
     search.conditions.users.first_name_contains = "Ben"
-    assert_equal(:users, search.auto_joins)
+    assert_equal(:users, search.joins)
     search.conditions.users.orders.id_gt = 2
-    assert_equal({:users => :orders}, search.auto_joins)
+    assert_equal({:users => :orders}, search.joins)
     search.conditions.users.reset_orders!
-    assert_equal(:users, search.auto_joins)
+    assert_equal(:users, search.joins)
     search.conditions.users.orders.id_gt = 2
     search.conditions.reset_users!
-    assert_equal nil, search.auto_joins
+    assert_equal nil, search.joins
   end
-=end
+
   def test_limit
     search = Account.new_search
     search.limit = 10
